Bug 240677 - Bad defaults in choosing default webbrowser
Summary: Bad defaults in choosing default webbrowser
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_componentchooser (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 234620 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-06-04 03:18 UTC by iform
Modified: 2011-11-19 19:31 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
This is the webbrowser component chooser immediately after pushing "Reset" (61.61 KB, image/png)
2010-06-04 03:18 UTC, iform
Details

Note You need to log in before you can comment on or make changes to this bug.
Description iform 2010-06-04 03:18:02 UTC
Created attachment 47658 [details]
This is the webbrowser component chooser immediately after pushing "Reset"

Version:           unspecified (using KDE 4.4.3) 
OS:                Linux

The webbrowser component chooser does not have a default value.  This lack of a default value ends up sending konqueror into an infinite loop, opening tons of windows. (https://bugs.kde.org/show_bug.cgi?id=234620)

All the other component chooser have a default value.  In Terminal, if text field is left blank, it becomes 'xterm'.  In Email Client, pressing reset selects the first option.  However in Webbrowser, pressing reset does not "reset" the form, and it allows a blank field to be set as the default.

Reproducible: Always

Steps to Reproduce:
In webbrowser component chooser, select "in the following browser." Type some text.  Press Apply.  Delete the text. Press Apply.  Now type something into the field, press reset.

Actual Results:  
What happens is that the test field is cleared (according to the previously replied results)...however, this should not be permitted.

Expected Results:  
The first option should be selected, as it happens when you press reset in any of the other component choosers

This particularly nasty bug rears its head when using xdg-open to open a url.  The result is a completely unruly konqueror that can only be remedied by killing the xserver.  Upon logging in again, the KDE menu is broken (cannot log out, shutdown, or restart).

It is a very simple fix.  Just set a default text string in the webbrowser component chooser text field, OR make it so that when the user presses reset, it actually resets (meaning choosing the first option, "in an application based on the contents of the URL").  See screenshots.
Comment 1 Christoph Feck 2010-06-07 13:23:14 UTC
Confirmed in today's trunk. It should not be possible to "Apply" an empty application name, this also is wrong in email application selection.
Comment 2 Christoph Feck 2010-06-07 17:49:17 UTC
SVN commit 1135564 by cfeck:

Fix browser service not reset to KIO for empty exec line

BUG: 240677


 M  +2 -2      componentchooserbrowser.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1135564
Comment 3 Christoph Feck 2010-06-07 18:25:50 UTC
SVN commit 1135569 by cfeck:

Revert last commit and apply a better fix

The problem was that the module saved an empty exec line
as "!", instead of resetting to KIO based service. The bug
should be catched on saving instead of on loading, otherwise
the user believes she is using KIO while in reality it tries
to run an empty command (and causes a crash this way).

CCBUG: 240677


 M  +3 -3      componentchooserbrowser.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1135569
Comment 4 Christoph Feck 2010-06-07 18:30:46 UTC
SVN commit 1135572 by cfeck:

Fix browser service not reset to KIO for empty exec line (backport r1135569)

CCBUG: 240677
FIXED-IN: 4.4.5


 M  +1 -1      componentchooserbrowser.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1135572
Comment 5 Dawit Alemayehu 2011-11-19 19:31:37 UTC
*** Bug 234620 has been marked as a duplicate of this bug. ***