Fix browser service not reset to KIO for empty exec line

BUG: 240677

svn path=/trunk/KDE/kdebase/runtime/; revision=1135564